# pyfederate

./: .gitignore  .python-version  Dockerfile  LICENSE  README.md  buildspec.yml  main.py  mocked_env.py  my_notes.md  playgroud.py  pyproject.toml  setup.py  test.env
.github/workflows/: ci.yml
auth_server/: __init__.py  auth_manager.py
auth_server/routes/: core.py  helpers.py  management.py  oauth.py
auth_server/utils/: client_manager.py  constants.py  exceptions.py  helpers.py  interfaces.py  models.py  schemas.py  scope_manager.py  telemetry.py  tools.py
pyfederate/routes/: core.py
pyfederate/utils/: constants.py  exceptions.py  schemas.py  schemas2.py  telemetry.py  tools.py
pyfederate2/managers/: __init__.py  client.py  scope.py  token.py
pyfederate2/schemas/: client.py  oauth.py  scope.py  token.py
pyfederate2/utils/: client.py  configs.py  constants.py  telemetry.py  tools.py
pyfederate3/: __init__.py
pyfederate3/crud/: auth.py  client.py  scope.py  session.py  token.py  token_session.py
pyfederate3/managers/: auth.py  client.py  scope.py  token.py
pyfederate3/routes/: client.py  core.py  oauth.py  scope.py  token.py  token_model.py
pyfederate3/schemas/: auth.py  client.py  oauth.py  scope.py  token.py
pyfederate3/utils/: auth.py  client.py  config.py  constants.py  exceptions.py  oauth.py  telemetry.py  token.py  tools.py
templates/: callback_page.html  confirmation.html  identity.html  password.html
templates/static/: style.css
tests/: conftest.py  test.env
tests/utils/: test_helpers.py  test_schemas.py  test_tools.py
(+26 files in other folders)
