[tool.poetry]
name = "auth-server"
version = "0.1.0"
description = ""
authors = ["luikymagno <luikymagno@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
bcrypt = "^4.0.1"
SQLAlchemy = "^2.0.18"
PyJWT = "^2.7.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
anyio = "^3.7.1"
pytest-asyncio = "^0.21.1"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
